fix for about me on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -314,6 +314,13 @@ footer i {
     margin: 5px;
 }
 /*---footer---*/
+@media screen and (max-width: 1236px) {
+    .left {
+        display: flex;
+        justify-content: center;
+        margin-right: 6%;
+    }
+}
 @media screen and (max-width: 768px) {
     .hero {
         height: 60vh;
